test/compile_errors/err_shift_negative_count_literal.w
//! expect-error: integer literal does not fit expected type

fn main:
    let x: u8 = 1
    let _ = x << -1
